# llm-assign

./: README.md  docker-compose.yml
chat-api/: Dockerfile  conversations.db  package.json
chat-api/src/: app.module.ts  conversation.controller.ts  conversation.entity.ts  conversation.service.ts
llm-python/: Dockerfile  README.md  pyproject.toml  requirements.txt
llm-python/src/: app.py
