[project]
name = "llm-python"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "python-mistralclient>=5.2.0",
    "mistralai>=0.4.2",
    "replicate>=0.31.0",
    "llamaapi>=0.1.36",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_python"]
